Fix services drop down clipping on sliding

--- a/JQuery/Tasks/Day 1/style/style.css
+++ b/JQuery/Tasks/Day 1/style/style.css
@@ -107,10 +107,17 @@ label{
   }
 }
 
+#servicesBtn{
+    position: relative;
+    width: 100px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 #services {
-  position: relative;
-  top: 20px;
-  left: 30px;
+  display: none;
+  position: absolute;
+  top: 40px;
   div {
     width: 100px;
     height: 35px;
@@ -120,3 +127,8 @@ label{
     padding-top: 20px;
   }
 }
+
+/* #content{
+    width:700px;
+    height: 500px;
+} */
